[package]
name = "coloring-game"
version = "0.1.0"
authors = ["Nexxuz0 <nexxuz0@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
cgmath = {version = "0.17.0", features=["mint"]}
rand = "0.7.3"
imgui = "0.3.0"
imgui-gfx-renderer = "0.3.0"
gfx = "0.18.2"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
